# back-texo

./: .gitignore  README.md  manage.py  pyproject.toml
core/: admin.py
core/migrations/: 0001_initial.py  0002_movie_winner.py
core/models/: Movie.py  Producer.py  Studio.py  __init__.py
core/serializers/: CreateAndUpdateMovieSerializer.py  Movie.py  Producer.py  Studio.py  __init__.py
core/tests/: TestMaxMinIntervalWinnerProducerStructureWithProducers.py  TestMaxMinIntervalWinnerProducerStructureWithoutProducers.py  __init__.py
core/views/: MaxMinIntervalWinnerProducer.py  Movie.py  Producer.py  Studio.py  __init__.py
data_dump/: apps.py
data_dump/management/commands/: dump_movie_data.py
golden_raspberry_awards/: asgi.py  settings.py  urls.py  wsgi.py
